--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ STORY 3 TEXT
                     <p>“Umm… because you don't get <span class='story3Input14'>ADJECTIVE 4</span>, tall sunflowers from roasted, salted sunflower seeds! And you certainly 
                     can't <span class='story3Input15'> PRESENT TENSE VERB 2</span> a pickled <span class='story3Input11'> FOOD (PLURAL)</span> tree!” explained <span class='story3Input2'>FEMALE</span> <span class='story3Input16'>ADVERB</span>.</p>
 
-                    <p>Just then, their mom and dad came home. They <span class='story3Input17'>PRESENT TENSE VERB 3</span> in the backyard and helped <span class='story3Input2'>FEMALE</span> and <span class='story3Input3'>MALE</span> 
+                    <p>Just then, their mom and dad came home. They <span class='story3Input17'>PAST TENSE VERB 3</span> in the backyard and helped <span class='story3Input2'>FEMALE</span> and <span class='story3Input3'>MALE</span> 
                     plant the <span class='story3Input18'>VEGETABLE (SINGULAr)</span> seeds and <span class='story3Input10'>FLOWER (SINGULAR)</span> seedlings. They replanted some of the lawn, too. After they 
                     were done, they had a very <span class='story3Input18'>ADJECTIVE 5</span> picnic of sunflower seeds and pickled <span class='story3Input11'>FOOD (PLURAL)</span>.</p>
 
